--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.org.springframework.security=DEBUG
 
 spring.datasource.url=jdbc:postgresql://db.jfyiwpiarsinogqxnsqe.supabase.co:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=XXXX
+spring.datasource.password=ReapingIs_8438_Necessary
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
